optimize chunk rendering
 - create updateMesh() function that buffers data so it doesn't do it every frame
- change chunk to be rendered as 'one' rather than each individual block
- only rendered visible faces (i.e. exposed to air)
- move buffering and setup fully to chunk

--- a/chunk-generator.vcxproj
+++ b/chunk-generator.vcxproj
@@ -131,6 +131,7 @@
     <ClCompile Include="chunk.cpp" />
     <ClCompile Include="glad.c" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="arr3_hash.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="block_types.h" />
