--- a/chunk-generator.vcxproj.filters
+++ b/chunk-generator.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="chunk.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="arr3_hash.hpp">
+      <Filter>Header Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="shader.h">
