update gitignore to ignore dependency

--- a/chunk-generator.vcxproj
+++ b/chunk-generator.vcxproj
@@ -128,8 +128,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\glad.c" />
     <ClCompile Include="chunk-generator\chunk.cpp" />
-    <ClCompile Include="chunk-generator\glad.c" />
     <ClCompile Include="chunk-generator\main.cpp" />
     <ClCompile Include="chunk-generator\world.cpp" />
   </ItemGroup>
