--- a/chunk-generator.vcxproj
+++ b/chunk-generator.vcxproj
@@ -134,17 +134,21 @@
     <ClCompile Include="chunk-generator\world.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="chunk-generator\stb_image.h" />
     <ClInclude Include="chunk-generator\vecn_hash.hpp" />
     <ClInclude Include="chunk-generator\block.h" />
     <ClInclude Include="chunk-generator\camera.h" />
     <ClInclude Include="chunk-generator\chunk.h" />
     <ClInclude Include="chunk-generator\shader.h" />
     <ClInclude Include="chunk-generator\world.h" />
-    <ClInclude Include="mesh.h" />
+    <ClInclude Include="chunk-generator\mesh.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="chunk-generator\shader.fs" />
     <None Include="chunk-generator\shader.vs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="chunk-generator\dirt.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
